Fixed documentation bug
